--- a/public/web.config
+++ b/public/web.config
@@ -1,18 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<configuration>
-<system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <rewrite>
-      <rules>
-        <rule name="ReactRouter Routes" stopProcessing="true">
-          <match url=".*" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-          </conditions>
-          <action type="Rewrite" url="index.html" />
-        </rule>
+<?xml version="1.0" encoding="utf-8"?>
+    <configuration>
+      <system.webServer>
+      <validation validateIntegratedModeConfiguration="false"/>
+        <rewrite>
+          <rules>
+            <rule name="Angular Routes" stopProcessing="true">
+              <match url=".*" />
+              <conditions logicalGrouping="MatchAll">
+                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+              </conditions>
+              <action type="Rewrite" url="/" />
+           </rule> 
+         </rules>
+        </rewrite>
+      </system.webServer>
+    </configuration>
 
-      </rules>
-    </rewrite>
-</system.webServer>
-</configuration>
