--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "prettier.tabWidth": 4,
     "prettier.trailingComma": "none",
     "prettier.singleQuote": true,
-    "prettier.printWidth": 120
+    "prettier.printWidth": 120,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
