--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "prettier.trailingComma": "none",
     "prettier.singleQuote": true,
     "prettier.printWidth": 120,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "prettier.useTabs": true,
+    "prettier.singleAttributePerLine": true,
+    "prettier.requireConfig": true
 }
