--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@azure/msal-react": "^1.5.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@microsoft/mgt-element": "^2.10.0",
+    "@microsoft/mgt-msal2-provider": "^2.10.0",
+    "@microsoft/mgt-react": "^2.10.0",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.12",
