--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.8",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.3",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "dotenv": "^16.0.3",
     "prettier": "2.8.0"
   }
