--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL = http://localhost:8000/ims/api/v1
+REACT_APP_BASE_URL = https://localhost:8443/ims/api/v1
 REACT_APP_UI_URL = http://localhost:3000
