--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 REACT_APP_BASE_URL = https://192.168.1.137:8443/ims/api/v1
 REACT_APP_UI_URL = https://ims.usdtl.com
+
+BUILD_PATH = \\webserver\E\ims\app\prod
