--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
-    "dotenv": "^16.0.3",
-    "prettier": "2.8.0"
+    "dotenv": "^16.0.3"
   }
 }
